--- a/MIMIC_ML_DL.ipynb
+++ b/MIMIC_ML_DL.ipynb
@@ -22,9 +22,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GLNUDMaSarJ3",
-        "outputId": "d157e5a7-7c12-464d-b003-381ec990fbd5"
+        "outputId": "d1473400-3cfe-4419-8b9b-ecd2c8c88c61"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "JV7iFGeDaT-u"
       },
@@ -55,6 +55,15 @@
         "dataset_ref = bq_client.dataset('mimiciii_clinical', project='physionet-data')\n",
         "bq_client.default_dataset = dataset_ref"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Sample query to test functional BigQuery Retrieval"
+      ],
+      "metadata": {
+        "id": "5UtBcq3Wxs2y"
+      }
     },
     {
       "cell_type": "code",
@@ -84,9 +93,9 @@
           "height": 124
         },
         "id": "XbDX4MpQacYS",
-        "outputId": "62c4f2e4-5e19-443f-bd64-19beafff66f1"
+        "outputId": "1ccd29fe-09da-4108-d1a2-b59b3ad7c6c7"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +114,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b108bad7-3914-42d4-a3fd-1de482184aab\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c23ca318-d621-4190-b6a5-faaa64614ee1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -140,7 +149,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b108bad7-3914-42d4-a3fd-1de482184aab')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c23ca318-d621-4190-b6a5-faaa64614ee1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -192,12 +201,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b108bad7-3914-42d4-a3fd-1de482184aab button.colab-df-convert');\n",
+              "        document.querySelector('#df-c23ca318-d621-4190-b6a5-faaa64614ee1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b108bad7-3914-42d4-a3fd-1de482184aab');\n",
+              "        const element = document.querySelector('#df-c23ca318-d621-4190-b6a5-faaa64614ee1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -217,7 +226,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_5e63ebbc-59f2-409e-ab19-95833e67c26e\">\n",
+              "  <div id=\"id_63fdaafd-a96d-4866-ab2c-e948671e593c\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -261,7 +270,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_5e63ebbc-59f2-409e-ab19-95833e67c26e button.colab-df-generate');\n",
+              "        document.querySelector('#id_63fdaafd-a96d-4866-ab2c-e948671e593c button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -282,15 +291,24 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# MIMIC ML/DL PROJECT"
+      ],
+      "metadata": {
+        "id": "CileNZMoah0E"
+      }
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "CileNZMoah0E"
+        "id": "4bYVWic1x18I"
       },
       "execution_count": null,
       "outputs": []
